# oxyroot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  gen_streamer.C  generate__streamers_db_generated.sh  justfile  readme.md
.github/workflows/: ci.yml
examples/: create_file_for_debug.rs  open_file.rs  open_file_for_debug.rs  open_file_for_debug2.rs
examples/from_uproot/: main.rs
oxyroot/: Cargo.toml
oxyroot-derive/: Cargo.toml
oxyroot-derive/examples/: 01_test.rs
oxyroot-derive/src/: lib.rs
oxyroot-dump/: Cargo.toml  readme.md
oxyroot-dump/src/: main.rs
oxyroot-genstreamers/: Cargo.toml
oxyroot-ls/: Cargo.toml  readme.md
oxyroot-ls/src/: main.rs
oxyroot/examples/: create_file_for_debug.rs  create_file_with_derive.rs  open_file_for_debug.rs
oxyroot/src/: error.rs  lib.rs  root.rs  utils.rs
oxyroot/src/rbase/: attfill.rs  attmarker.rs  mod.rs  named.rs  object.rs  objstring.rs
oxyroot/src/rbytes/: error.rs  rbuffer.rs  wbuffer.rs
oxyroot/src/rcolors/: mod.rs
oxyroot/src/rcont/: list.rs  mod.rs  objarray.rs  tmap.rs
oxyroot/src/rdict/: error.rs
oxyroot/src/rdict/streamers/: db.rs  dump_from_root.txt  mod.rs  streamer_types.rs  streamers_db_gen.rs  streamers_db_gen_helpers.rs  streamers_db_generated.rs
oxyroot/src/riofs/: error.rs  file.rs  key.rs
oxyroot/src/rmeta/: consts.rs
oxyroot/src/rtree/: basket.rs  leaf.rs  mod.rs  streamer_type.rs  tree.rs  wbasket.rs
oxyroot/src/rtree/branch/: mod.rs  tbranch.rs  tbranch_element.rs  wbranch.rs
oxyroot/src/rtree/tree/: base.rs  branch_name.rs  mod.rs  reader.rs  tio_features.rs  traits.rs  tree.rs  writer.rs
oxyroot/src/rtypes/: factory.rs
oxyroot/src/rusty/: containers.rs  mod.rs
oxyroot/tests/: 1_read_structs.rs  2_from_uproot.rs  4_huge.rs  7_tree_with_user_info.rs  read_branch.C
oxyroot/tests/7_userinfo/: tree_with_user_info_with_map.C  tree_with_user_info_with_map.root
oxyroot/tests/common/: mod.rs  template_writer.rs
oxyroot/tests/huge/: make_huge.C
oxyroot/tests/root_containers/: root_containers.C
oxyroot/tests/stl_containers/: stl_containers.root
oxyroot/tests_data/doc/: struct_sd.root
oxyroot/tests_data/g4/: g4-ntuples.root
oxyroot/tests_data/gen-geant4/: main.cpp
oxyroot_derive/: Cargo.toml
oxyroot_derive/src/: lib.rs
src/: as_any.rs  error.rs  lib.rs  rcompress.rs  rdict.rs  root.rs  rvers.rs  utils.rs
src/rbase/: attfill.rs  attline.rs  attmarker.rs  consts.rs  error.rs  mod.rs  named.rs  object.rs  objstring.rs
src/rbytes/: consts.rs  error.rs  mod.rs  rbuffer.rs  wbuffer.rs
src/rcolors/: mod.rs
src/rcont/: list.rs  objarray.rs
src/rdict/: error.rs  mod.rs
src/rdict/streamers/: db.rs  dump_from_root.txt  mod.rs  streamer_types.rs  streamers_db_gen.rs
src/riofs/: blocks.rs  consts.rs  dir.rs  error.rs  file.rs  key.rs  mod.rs  utils.rs
src/rmeta/: consts.rs  mod.rs
src/rtree/: basket.rs  branch.rs  leaf.rs  mod.rs  streamer_type.rs  tree.rs  wbasket.rs
src/rtree/branch/: mod.rs  tbranch.rs  tbranch_element.rs  tbranch_props.rs  wbranch.rs
src/rtypes/: error.rs  factory.rs  mod.rs
src/rusty/: containers.rs  mod.rs
test_suite/: Cargo.toml
test_suite/create_root_files_with_root/: CMakeLists.txt  README  data2Tree.hpp  data2TreeLinkDef.hpp  main.cpp  t04_01_write_tree_points.root  t04_02_write_tree_points_prefix.root  t04_03_write_tree_pointsvector.root  t04_04_write_twopoints.root  t04_05_write_severalpoints.root
test_suite/examples/: create_tree_with_derive.rs  open_with_derive.rs
test_suite/tests/: 01_derive_read.rs  02_derive_write.rs  03_derive_read_attributes.rs  04_open_class_with_derive.rs
tests/: 0_import_crate.rs  100__write_auto_read_primitives.rs  101__write_root_read.rs  1_read_structs.rs  2_from_uproot.rs  3_stl_containers.rs  4_huge.rs  5_from_groot.rs  6_from_geant4.rs  read_branch.C
tests/common/: template_writer.rs
tests/huge/: huge.root  make_huge.C
tests/stl_containers/: stl_containers.C
tests_data/gen-geant4/: CMakeLists.txt
