[package]
name = "oxyroot"
version = "0.1.2"
edition = "2021"
authors = ["Mathieu Dupont <mdsoft@rudu.fr>"]
exclude = ["*test_data/", "*.root", "*.C"]
description = "Another attempt to make library reading of `.root` binary files which are commonly used in particle physics"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://gitlab.in2p3.fr/mdupont/oxyroot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.17"
num = "0.4.0"
uuid = "1.0.0"
thiserror = "1.0"
chrono = "0.4.19"
#flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
flate2 = { version = "1.0.24" }
lazy_static = "1.4.0"
trait-set = "0.3.0"
downcast = "0.11.0"
num-traits = "0.2"
num-derive = "0.3"
regex = "1"
xz2 = "0.1"
lz4 = "1.23.1"
itertools = "0.10.2"
paste = "1.0.7"

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.9.0"

[features]
zlib-ng = ["flate2/zlib-ng"]