[package]
name = "oxyroot"
version = "0.1.7"
edition = "2021"
authors = ["Mathieu Dupont <mdsoft@rudu.fr>"]
exclude = ["*test_data/", "*.root", "*.C"]
description = "Another attempt to make library reading of `.root` binary files which are commonly used in particle physics"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/m-dupont/oxyroot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num = "0.4"
uuid = "1.0.0"
chrono = "0.4"
#flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
flate2 = { version = "1" }
lazy_static = "1.4.0"
trait-set = "0.3.0"
downcast = "0.11.0"
num-traits = "0.2"
num-derive = "0.4"
regex = "1"
xz2 = "0.1"
lz4 = "1"
itertools = "0.10"
paste = "1.0.7"
clap = { version = "4.5.1", features = ["derive"], optional = true }
env_logger = { version = "0.9.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
test-log = "0.2"
env_logger = "0.9.0"

[features]
zlib-ng = ["flate2/zlib-ng"]
build-binaries = ["clap", "env_logger"]

[[bin]]
name = "oxyroot-ls"
required-features = ["build-binaries"]

[[bin]]
name = "oxyroot-dump"
required-features = ["build-binaries"]
