[package]
name = "oxyroot-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
oxyroot = { path = "../oxyroot" }
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "1"
