[package]
name = "oxyroot-dump"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A simple command line tool which use oxyroot to dump the content of tree and branches of a .root file."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxyroot = { path = "../oxyroot", version = "0.1" }
regex = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
anyhow = { version = "1.0" }