[package]
name = "oxyroot-genstreamers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
#oxyroot = { path = "../oxyroot" }
env_logger = { version = "0.11" }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
regex = "1.11.0"
