[package]
name = "oxyroot"
version = "0.1.15"
edition = "2021"
authors = ["Mathieu Dupont <mdsoft@rudu.fr>"]
exclude = ["*test_data/", "*.root", "*.C"]
description = "Another attempt to make library reading and writing of `.root` binary files which are commonly used in particle physics"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/m-dupont/oxyroot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[dependencies]
oxyroot_derive = { path = "../oxyroot_derive", optional = true, version = "0.1" }
log = "0.4"
num = "0.4"
uuid = "1"
chrono = "0.4"

#flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
flate2 = { version = "1" }
lazy_static = "1.4.0"
trait-set = "0.3.0"
downcast = "0.11.0"
num-traits = "0.2"
num-derive = "0.4"
regex = "1"
xz2 = "0.1"
lz4 = "1"
itertools = "0.12"
paste = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }


[dev-dependencies]
test-log = "0.2"


[features]
zlib-ng = ["flate2/zlib-ng"]
build-binaries = ["clap", "env_logger", "anyhow"]
default = ["build-binaries"]
# Provide derive(Serialize, Deserialize) macros.
derive = ["oxyroot_derive"]

[[bin]]
name = "oxyroot-ls"
required-features = ["build-binaries"]

[[bin]]
name = "oxyroot-dump"
required-features = ["build-binaries"]

[[bin]]
name = "oxyroot-genstreamers"
required-features = ["build-binaries"]

[[bin]]
name = "oxyroot_openstreamers"
required-features = ["build-binaries"]
